# cvnets-updata

./: CHANGELOG.md  README.md  constraints.txt  main_benchmark.py  main_conversion.py  main_eval.py  main_loss_landscape.py  main_train.py  mypy.ini  pyproject.toml  requirements.txt  requirements_docs.txt  setup.py
.github/workflows/: docs-pages.yml  import-smoke.yml
common/: __init__.py
cvnets/: __init__.py
data/: __init__.py  data_loaders.py
docs/: .gitignore  Makefile  make.bat
engine/: __init__.py  eval_detection.py  eval_segmentation.py  evaluation_engine.py  training_engine.py  utils.py
loss_fn/: __init__.py  base_criteria.py  classification.py  composite_loss.py  detection.py  distillation.py  neural_augmentation.py  segmentation.py
loss_landscape/: landscape_utils.py
metrics/: __init__.py  average_precision.py  coco_map.py  confusion_mat.py  image_text_retrieval.py  intersection_over_union.py  metric_base.py  metric_base_test.py  metric_monitor.py  misc.py  probability_histograms.py  psnr.py  retrieval_cmc.py  stats.py  topk_accuracy.py
optim/: __init__.py  adam.py  adamw.py  base_optim.py  sgd.py
options/: opts.py  utils.py
tests/: configs.py  dummy_loader.py  test_byteformer_collate_fn.py  test_image_pil.py  test_model.py  test_scheduler.py  test_tokenizer.py  test_training_engine.py  test_transforms.py
utils/: checkpoint_utils.py  common_utils.py  ddp_utils.py  download_utils.py  download_utils_base.py  import_utils.py  logger.py  object_utils.py  pytorch_to_coreml.py  registry_test.py  tensor_utils.py  visualization_utils.py
(+332 files in other folders)
